# spotlight

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/admin-web/: README.md
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: README.md
apps/server/: Cargo.toml  README.md
apps/server/src/: automation.rs  completion.rs  git_ops.rs  handlers.rs  main.rs  models.rs  prompt.rs  runtime.rs  server.rs  snapshot.rs  state.rs  task_ops.rs  ui.rs
crates/insight-engine/: Cargo.toml
docs/: README.md  acceptance-and-artifacts.md  admin-and-ops-console.md  admin-and-ops-slices-0.1.5.md  agent-autonomy-and-decision-rules.md  ai-insight-slices-0.1.7.md  ai-management-and-insight-engine.md  api-design.md  architecture-consistency-log.md  autonomy-and-self-iteration.md  billing-and-deployment-model.md  bootstrap-notes.md  clawteam-adoption-todo.md  clawteam-reference-gap-analysis.md  data-model-v2.md  data-model.md  decision-inbox-design.md  delivery-plan.md  execution-slot-and-coordination-model-v1.md  extensibility-and-compatibility.md  main-rs-entry-boundary-v1.md  mobile-companion-strategy.md  mvp-0.1.0-build-and-deploy-actions.md  mvp-0.1.0-explore-action.md  network-ai-reference-gap-analysis.md  platform-abstractions-v1.md  product-constraints-v1.md  provider-abstraction.md  provider-runtime-bridge-note.md  reference-project-refresh-2026-03-30.md  runtime-protocol-decision.md  runtime-session-and-task-recovery-v1.md  security-and-audit.md  state-machine.md  system-architecture.md  ui-information-architecture.md  versioned-fact-memory-v1.md  workspace-serialization-transition-2026-03-28.md
scripts/: client-doctor.mjs  client-doctor.test.mjs  recovery-claim-guard.mjs  recovery-claim-guard.test.mjs  task-state-reassess.mjs  task-state-reassess.test.mjs
(+26 files in other folders)
