[workspace]
members = [
  "apps/server",
  "crates/platform-core",
  "crates/workflow-engine",
  "crates/provider-runtime",
  "crates/insight-engine",
]
exclude = [
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
tower = { version = "0.5", features = ["util"] }
