[package]
name = "spotlight-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
platform-core = { path = "../../crates/platform-core" }
provider-runtime = { path = "../../crates/provider-runtime" }

[dev-dependencies]
tower.workspace = true
