[package]
name = "spotlight-desktop"
version = "0.1.0"
edition = "2021"
description = "Spotlight desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["custom-protocol"] }
url = "2"
