[package]
name = "spotlight-desktop"
version = "0.1.0"
edition = "2021"
description = "Spotlight desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
platform-core = { path = "../../../crates/platform-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol"] }
url = "2"
